2001-06-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.c (gprintf): Added code to make use of new features of
 	mant_exp() introduced Jan 21st this year, for %l and %L formats.
  	Helps to avoid problems where people use %L even though the
 	logbase is 10.

2001-06-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/x11.trm (X11_waitforinput): Call getc() instead of read(),
 	to avoid problems with buffering of stdio streams.

	* src/command.c (fgets_ipc): Fix EOF checking error. Replaced
 	pointer arithmetics by array indexing. Made this function active
 	regardless of USE_MOUSE status, moving the #ifdef inside it.
	(read_line): Simplification: just call fgets_ipc, no matter what
 	USE_MOUSE is. Let that function decide whether mouse support stuff
 	is needed.

	* src/gadgets.c (clip_point): Cast coordinates to int in
 	comparison to the boundaries, since those are signed too, and they
 	might actually be negative, sometimes. Fixes wrong clipping for
 	negative 'set offset' parameters.

	* src/gp_types.h: Parenthesize bitmasks in plot style enum values,
 	to quench a compiler warning.

2001-06-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c: remove duplicated show for historysize.

2001-06-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c: implemented show for historysize, multiplot and
	termoptions.

2001-06-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	I went on a little crusade against magic numbers in the source
 	code:
	
	* src/axis.h (t_autoscale): Define and use new enum type for the
 	two-bit fields autoscale and set_autoscale in struct axis. This
 	affects tons of other places using these variables, too, so I
 	won't list them individually, here.

	* src/gp_types.h (PLOT_STYLE_FLAGS): New enum to name flags stored
 	as part of the plot style numbers in enum PLOT_STYLE. Use these
 	names instead of magic numbers.

	* src/plot2d.c (t_uses_asis): New enum to define names for the two